<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.udacity.catpoint</groupId>
  <artifactId>catpoint-parent</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>catpoint-parent</name>

  <modules>
    <module>ImageService</module>
    <module>SecService</module>


  </modules>


  <properties>
<!--    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
    <maven.compiler.source>14</maven.compiler.source>
    <maven.compiler.target>14</maven.compiler.target>
  </properties>

<!--  <dependencies>-->
<!--    &lt;!&ndash; https://mvnrepository.com/artifact/com.miglayout/miglayout &ndash;&gt;-->
<!--    <dependency>-->
<!--      <groupId>com.miglayout</groupId>-->
<!--      <artifactId>miglayout</artifactId>-->
<!--      <version>3.7.4</version>-->
<!--    </dependency>-->


<!--    <dependency>-->
<!--      <groupId>org.mockito</groupId>-->
<!--      <artifactId>mockito-junit-jupiter</artifactId>-->
<!--      <version>4.6.1</version>-->
<!--      <scope>test</scope>-->
<!--    </dependency>-->
<!--    &lt;!&ndash; https://mvnrepository.com/artifact/com.google.code.gson/gson &ndash;&gt;-->
<!--    <dependency>-->
<!--      <groupId>com.google.code.gson</groupId>-->
<!--      <artifactId>gson</artifactId>-->
<!--      <version>2.10</version>-->
<!--    </dependency>-->

<!--    &lt;!&ndash; https://mvnrepository.com/artifact/com.google.common/google-collect &ndash;&gt;-->
<!--    <dependency>-->
<!--      <groupId>com.google.guava</groupId>-->
<!--      <artifactId>guava</artifactId>-->
<!--      <version>19.0-rc1</version>-->
<!--    </dependency>-->
<!--    &lt;!&ndash; Thanks for using https://jar-download.com &ndash;&gt;-->
<!--    &lt;!&ndash; https://mvnrepository.com/artifact/software.amazon.awscdk/core &ndash;&gt;-->
<!--    <dependency>-->
<!--      <groupId>software.amazon.awscdk</groupId>-->
<!--      <artifactId>core</artifactId>-->
<!--      <version>1.181.1</version>-->
<!--    </dependency>-->

<!--    &lt;!&ndash; https://mvnrepository.com/artifact/software.amazon.awssdk/s3 &ndash;&gt;-->

<!--    &lt;!&ndash; https://mvnrepository.com/artifact/junit/junit &ndash;&gt;-->
<!--    <dependency>-->
<!--      <groupId>junit</groupId>-->
<!--      <artifactId>junit</artifactId>-->
<!--      <version>4.13.2</version>-->
<!--      <scope>test</scope>-->
<!--    </dependency>-->

<!--    &lt;!&ndash; https://mvnrepository.com/artifact/software.amazon.awssdk/rekognition &ndash;&gt;-->
<!--&lt;!&ndash;    <dependency>&ndash;&gt;-->
<!--&lt;!&ndash;      <groupId>software.amazon.awssdk</groupId>&ndash;&gt;-->
<!--&lt;!&ndash;      <artifactId>rekognition</artifactId>&ndash;&gt;-->
<!--&lt;!&ndash;      <version>2.18.28</version>&ndash;&gt;-->
<!--&lt;!&ndash;    </dependency>&ndash;&gt;-->
<!--    <dependency>-->
<!--      <groupId>org.testng</groupId>-->
<!--      <artifactId>testng</artifactId>-->
<!--      <version>7.6.1</version>-->
<!--      <scope>test</scope>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.junit.jupiter</groupId>-->
<!--      <artifactId>junit-jupiter</artifactId>-->
<!--      <version>5.7.0</version>-->
<!--      <scope>test</scope>-->
<!--    </dependency>-->
<!--&lt;!&ndash;    <dependency>&ndash;&gt;-->
<!--&lt;!&ndash;      <groupId>catpoint-parent</groupId>&ndash;&gt;-->
<!--&lt;!&ndash;      <artifactId>SecurityService</artifactId>&ndash;&gt;-->
<!--&lt;!&ndash;      <version>1.0-SNAPSHOT</version>&ndash;&gt;-->
<!--&lt;!&ndash;      <scope>compile</scope>&ndash;&gt;-->
<!--&lt;!&ndash;    </dependency>&ndash;&gt;-->
<!--        <dependency>-->
<!--      <groupId>com.udacity.catpoint</groupId>-->
<!--      <artifactId>ImageService</artifactId>-->
<!--      <version>1.0-SNAPSHOT</version>-->
<!--      <scope>compile</scope>-->
<!--    </dependency>-->
<!--&lt;!&ndash;    <dependency>&ndash;&gt;-->
<!--&lt;!&ndash;      <groupId>catpoint-parent</groupId>&ndash;&gt;-->
<!--&lt;!&ndash;      <artifactId>SecurityService</artifactId>&ndash;&gt;-->
<!--&lt;!&ndash;      <version>1.0-SNAPSHOT</version>&ndash;&gt;-->
<!--&lt;!&ndash;      <scope>compile</scope>&ndash;&gt;-->
<!--&lt;!&ndash;    </dependency>&ndash;&gt;-->

<!--    &lt;!&ndash; add your dependencies here! &ndash;&gt;-->
<!--  </dependencies>-->
<!--  <reporting>-->
<!--    <plugins>-->



<!--      <plugin>-->
<!--        <groupId>com.github.spotbugs</groupId>-->
<!--        <artifactId>spotbugs-maven-plugin</artifactId>-->
<!--        <version>4.7.2.1</version>-->
<!--        <configuration>-->
<!--          <includeFilterFile>spotbugs-security-include.xml</includeFilterFile>-->
<!--          <excludeFilterFile>spotbugs-security-exclude.xml</excludeFilterFile>-->
<!--          <plugins>-->
<!--            <plugin>-->
<!--              <groupId>com.h3xstream.findsecbugs</groupId>-->
<!--              <artifactId>findsecbugs-plugin</artifactId>-->
<!--              <version>1.12.0</version>-->
<!--            </plugin>-->
<!--          </plugins>-->
<!--        </configuration>-->
<!--      </plugin>-->
<!--    </plugins>-->

<!--  </reporting>-->
  <build>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
<!--        <plugin>-->
<!--          <groupId>com.github.spotbugs</groupId>-->
<!--          <artifactId>spotbugs-maven-plugin</artifactId>-->
<!--          <version>4.1.4</version>-->

<!--        </plugin>-->
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
            <configuration>
                <source>14</source>
                <target>14</target>
            </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0-M5</version>
            <configuration>
                <argLine>
                    --add-opens SecServiceModule/Service=ALL-UNNAMED
                </argLine>
            </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
          <configuration>
            <archive>
              <manifest>
                <addClasspath>true</addClasspath>
                <classpathPrefix>lib/</classpathPrefix>
                <mainClass>CatpointApp</mainClass>
              </manifest>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>

        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.9.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.4.2</version>
          <executions>
            <execution>
              <goals>
                <goal>single</goal>
              </goals>
              <id>assembly</id>
              <phase>package</phase>
              <configuration>
                <descriptorRefs>
                  <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
                <archive>
                  <manifest>
                    <mainClass>com.udacity.catpoint.udasecurity.application.CatpointApp</mainClass>
                  </manifest>
                </archive>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>4.7.2.1</version>
      </plugin>
    </plugins>
  </reporting>
</project>
